[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Timeline.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Playhead.tscn" type="PackedScene" id=3]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 2

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 449, 65 )

[node name="Timeline" type="Node2D"]
script = ExtResource( 2 )

[node name="TimelineTexture" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_right = 896.0
margin_bottom = 128.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Playhead" parent="." instance=ExtResource( 3 )]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 447, 63 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
